fixed issue with styling on iphone

--- a/src/orca.scss
+++ b/src/orca.scss
@@ -261,7 +261,7 @@ code {
   }
   body {
     margin: 0;
-    background-color: var(--bg);
+    
   }
 
   input[type="date"],
